      
      - python 2.1.3 compatibility: boolean values like "required"
        are translated to int on XML serializations/deserialization

        The last two fixes are due to Sebastien Robin

      - render_hidden of DateTimeField's and fields allowing multiple
        selections did not lead to something useful for validation

  1.6.1
  
    Bugs Fixed
 
      - Adding Fields to empty Groups had not been possible.

      - ZMI "Order" tab of an empty form did raise an exception.

  1.6.0
  
    Features Added

      - FileSystemSite/DirectoryView improvements:

         * XML filesystem representation of Formulator forms can now
           also be used with CMF (if FileSystemSite is not installed).

         * FSForm gets automatically registered with the directory
           view system if CMF or FileSystemSite is installed.

      - Infrastructure for Validators not to get taken into account in
        validation procedures (need_validate).
      
      - A new label field. Doesn't participate in validation. It shows
        its text as a label in the form.

      - Unicode mode. A form can now be put in 'unicode mode', which
        means it stores all its textual data as unicode strings. This
        allows for easier integration with Zope systems that use unicode
        internally, such as Silva.
 
      - Disabling of fields. A field can now be disabled from being
        displayed or validated by unchecking the 'Enabled' validator
        property. This can be done dynamically as well using TALES
        overrides.

    Bugs Fixed

      - The css_class value of a DateTime field had been ignored.  It
        is now properly passed down to its subfields, so all subfield
        elements are rendered with the given css_class value.

  1.5.0

    Features Added

      - Added ProductForm, which provides a wrapping around
        Formulator.BasicForm, allowing it to be created inside a
        product but used outside it.
